# agenteval

./: .gitignore  README.md  pyproject.toml
action/: action.yml
agenteval/: __init__.py  assertions.py  cli.py  pytest_plugin.py  recorder.py  server.py  snapshot.py  suite.py  trace.py
agenteval/integrations/: __init__.py  anthropic_patch.py  auto.py  langchain_callback.py  openai_patch.py
tests/: conftest.py  test_assertions.py  test_integrations.py  test_pytest_plugin.py  test_recorder.py  test_server.py  test_snapshot.py  test_suite.py  test_trace.py  test_trace_save.py
